Empty State added in NoteScreen

--- a/frontend/src/ui/screens/note/NoteScreen.module.css
+++ b/frontend/src/ui/screens/note/NoteScreen.module.css
@@ -8,3 +8,11 @@
     bottom: 32px;
     right: 32px;
 }
+
+.noNotesText{
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
